--- a/index.html
+++ b/index.html
@@ -3,9 +3,321 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ilyes's portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
-    hello world
+    <!-- DECKTOP NAV -->
+    <nav id="descktop-nav">
+      <div class="logo">ilyes</div>
+      <div>
+        <ul class="nav-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!-- HAMBURGER NAV -->
+    <nav id="hamburger-nav">
+      <div class="logo">ilyes</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="menu-links">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </div>
+      </div>
+    </nav>
+
+    <!-- SECTIONS -->
+    <section id="profile">
+      <div class="section__pic-container">
+        <img src="assets/profile.JPG" alt="" />
+      </div>
+
+      <div class="secion__text">
+        <p class="secion__text__p1">Hello I am</p>
+        <h1 class="title">ilyes mkb</h1>
+        <p class="secion__text__p2">Full Stack Developper</p>
+        <div class="btn-container">
+          <button id="cv-btn" class="btn btn-color-2">CV</button>
+
+          <button id="contact-btn" class="btn btn-color-1">contact</button>
+        </div>
+        <div id="socials-container">
+          <img
+            class="icon"
+            src="./assets/linkedin.svg"
+            alt=""
+            onclick="window.open('https://www.linkedin.com/', '_blank')"
+          />
+          <img
+            class="icon"
+            src="./assets/github.svg"
+            alt=""
+            onclick="window.open('https://www.github.com/', '_blank')"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- ABOUT -->
+    <section id="about">
+      <p class="secion__text__p1">Get to Know more</p>
+      <h1 class="title">About Me</h1>
+      <div class="section-container">
+        <div class="section__pic-container">
+          <img src="assets/profile.JPG" alt="" />
+        </div>
+        <div class="about-details-container">
+          <div class="about-container">
+            <div class="details-container">
+              <img class="about-pic" src="assets/leaderboard.svg" alt="" />
+              <h3>Experience</h3>
+              <p>
+                1+ year <br />
+                full Stack Developpment
+              </p>
+            </div>
+            <div class="details-container">
+              <img src="assets/school.svg" alt="" />
+              <h3>Education</h3>
+              <p>
+                senior technician
+                <br />
+                web and multimedia developer
+              </p>
+            </div>
+
+            <img
+              src="/assets/double_arrow_down.svg"
+              class="icon arrow"
+              alt=""
+              onclick="location.href='#experience'"
+            />
+          </div>
+          <div class="text-container">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perferendis eligendi architecto quae alias ratione voluptates
+              mollitia modi, eos assumenda sequi ullam, quasi molestias ea ad
+              itaque nemo optio officiis inventore corporis minus maxime!
+              Reprehenderit laborum facilis illum quaerat eveniet, nostrum
+              quidem ea accusamus omnis qui, laboriosam, debitis soluta
+              necessitatibus consectetur?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- EXPERIENCE -->
+    <section id="experience">
+      <p class="secion__text__p1">Explore my</p>
+      <h1 class="title">Experience</h1>
+      <div class="experience-details-container">
+        <div class="about-container">
+          <!-- front end -->
+          <div class="details-container">
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>HTML</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>CSS</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>Javascript</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>Bootstrap</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <!-- Back end -->
+          <div class="details-container">
+            <h2 class="experience-sub-title">backend development</h2>
+            <div class="article-container">
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>PHP</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>MYSQL</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>Node js</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+
+              <article>
+                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <div>
+                  <h3>Git</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="/assets/double_arrow_down.svg"
+        class="icon arrow"
+        alt=""
+        onclick="location.href='#projects'"
+      />
+    </section>
+    <!-- PROJECTS -->
+    <section id="projects">
+      <p class="secion__text__p1">Browse my recent</p>
+      <h1 class="title">Projects</h1>
+
+      <div class="experience-details-container">
+        <div class="about-container">
+          <!-- card -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="assets/project1.jpg" class="project-img" alt="" />
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div
+              class="btn-container"
+              onclick="window.open('https://www.github.com/', '_blank')"
+            >
+              <button class="btn btn-color-2 project-btn">github</button>
+            </div>
+            <div
+              class="btn-container"
+              onclick="window.open('https://www.github.com/', '_blank')"
+            >
+              <button class="btn btn-color-2 project-btn">Live demo</button>
+            </div>
+          </div>
+          <!-- Card -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="assets/project1.jpg" class="project-img" alt="" />
+            </div>
+            <h2 class="experience-sub-title project-title">Project two</h2>
+            <div
+              class="btn-container"
+              onclick="window.open('https://www.github.com/', '_blank')"
+            >
+              <button class="btn btn-color-2 project-btn">github</button>
+            </div>
+            <div
+              class="btn-container"
+              onclick="window.open('https://www.github.com/', '_blank')"
+            >
+              <button class="btn btn-color-2 project-btn">Live demo</button>
+            </div>
+          </div>
+          <!-- card -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="assets/project1.jpg" class="project-img" alt="" />
+            </div>
+            <h2 class="experience-sub-title project-title">Project three</h2>
+            <div
+              class="btn-container"
+              onclick="window.open('https://www.github.com/', '_blank')"
+            >
+              <button class="btn btn-color-2 project-btn">github</button>
+            </div>
+            <div
+              class="btn-container"
+              onclick="window.open('https://www.github.com/', '_blank')"
+            >
+              <button class="btn btn-color-2 project-btn">Live demo</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <img
+        src="/assets/double_arrow_down.svg"
+        class="icon arrow"
+        alt=""
+        onclick="location.href='#contact'"
+      />
+    </section>
+    <!-- CONTACT -->
+    <section id="contact">
+      <h1 title="title">Contact me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img src="assets/envelope-at.svg" class="icon contact-icon" alt="" />
+          <p>
+            <a
+              class="contact-link"
+              href="mailto:ilyesdev@gmail.com"
+              target="_blank"
+              >ilyesdev@gamil.com</a
+            >
+          </p>
+        </div>
+        <div class="contact-info-container">
+          <img src="assets/linkedin.svg" class="icon contact-icon" alt="" />
+          <p>
+            <a
+              class="contact-link"
+              href="https://www.linkedin.com/"
+              target="_blank"
+              >linkdin profile</a
+            >
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- FOOTER -->
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
