--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ilyes's portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="assets/programmer-computer-icon.svg">
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -11,11 +13,18 @@
     <!-- DECKTOP NAV -->
     <nav id="descktop-nav">
       <div class="logo">ilyes</div>
+
+<button class="btn btn-color-1 lang-switch"  value="en" title="Appuyez pour passer en français">English</button>
+      </div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a class="about_transalation"href="#about">About</a></li>
+          <li>
+            <a class="experience_transalation" href="#experience">Experience</a>
+          </li>
+          <li>
+            <a class="projects_transalation" href="#projects">Projects</a>
+          </li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -23,16 +32,22 @@
     <!-- HAMBURGER NAV -->
     <nav id="hamburger-nav">
       <div class="logo">ilyes</div>
+      <button class="btn btn-color-1 lang-switch" value="en" title="Appuyez pour passer en français">English</button>
       <div class="hamburger-menu">
         <div class="hamburger-icon">
           <span></span>
           <span></span>
           <span></span>
         </div>
+
         <div class="menu-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
+          <li><a class="about_transalation" href="#about">About</a></li>
+          <li>
+            <a class="experience_transalation" href="#experience">Experience</a>
+          </li>
+          <li>
+            <a class="projects_transalation" href="#projects">Projects</a>
+          </li>
           <li><a href="#contact">Contact</a></li>
         </div>
       </div>
@@ -45,9 +60,9 @@
       </div>
 
       <div class="secion__text">
-        <p class="secion__text__p1">Hello I am</p>
+        <p  class="secion__text__p1 hello">Hello , I am</p>
         <h1 class="title">ilyes mkb</h1>
-        <p class="secion__text__p2">Full Stack Developper</p>
+        <p  class="secion__text__p2 job_title">Full Stack Developper</p>
         <div class="btn-container">
           <button id="cv-btn" class="btn btn-color-2">CV</button>
 
@@ -71,8 +86,8 @@
     </section>
     <!-- ABOUT -->
     <section id="about">
-      <p class="secion__text__p1">Get to Know more</p>
-      <h1 class="title">About Me</h1>
+      <p  class="secion__text__p1 get_to_know">Get to Know more</p>
+      <h1 class="title about_transalation">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img src="assets/profile.JPG" alt="" />
@@ -82,15 +97,15 @@
             <div class="details-container">
               <img class="about-pic" src="assets/leaderboard.svg" alt="" />
               <h3>Experience</h3>
-              <p>
+              <p class="experience_summary">
                 1+ year <br />
                 full Stack Developpment
               </p>
             </div>
             <div class="details-container">
               <img src="assets/school.svg" alt="" />
-              <h3>Education</h3>
-              <p>
+              <h3 class="education">Education</h3>
+              <p class="degree">
                 senior technician
                 <br />
                 web and multimedia developer
@@ -105,14 +120,17 @@
             />
           </div>
           <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perferendis eligendi architecto quae alias ratione voluptates
-              mollitia modi, eos assumenda sequi ullam, quasi molestias ea ad
-              itaque nemo optio officiis inventore corporis minus maxime!
-              Reprehenderit laborum facilis illum quaerat eveniet, nostrum
-              quidem ea accusamus omnis qui, laboriosam, debitis soluta
-              necessitatibus consectetur?
+            <p class="description">
+              Hi! I’m a web developer with a strong foundation in front-end and
+              back-end development. I specialize in building user-friendly
+              websites and web applications using technologies like HTML, CSS,
+              JavaScript, PHP , and MySQL. With a solid understanding of UI/UX
+              principles and experience in working with MVC architecture. I
+              enjoy solving problems, learning new tools , and continuously
+              improving my craft. When I’m not coding, I like to explore new
+              tech trends, or refine personal projects that push my skills
+              further . I'm currently open to new opportunities where I can
+              contribute, learn, and grow as a developer.
             </p>
           </div>
         </div>
@@ -120,33 +138,35 @@
     </section>
     <!-- EXPERIENCE -->
     <section id="experience">
-      <p class="secion__text__p1">Explore my</p>
-      <h1 class="title">Experience</h1>
+      <p class="secion__text__p1 explore" >Explore my</p>
+      <h1 class="title  experience_transalation">Experience</h1>
       <div class="experience-details-container">
         <div class="about-container">
           <!-- front end -->
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2  class="experience-sub-title frontend">
+              Frontend Development
+            </h2>
             <div class="article-container">
               <article>
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
+                  <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Javascript</h3>
-                  <p>Experienced</p>
+                  <p class="experienced">Experienced</p>
                 </div>
               </article>
 
@@ -154,34 +174,36 @@
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Bootstrap</h3>
-                  <p>Intermediate</p>
+                  <p class="intermediate">Intermediate</p>
                 </div>
               </article>
             </div>
           </div>
           <!-- Back end -->
           <div class="details-container">
-            <h2 class="experience-sub-title">backend development</h2>
+            <h2 id="backend" class="experience-sub-title">
+              backend development
+            </h2>
             <div class="article-container">
               <article>
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>PHP</h3>
-                  <p>Experienced</p>
+                  <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>MYSQL</h3>
-                  <p>Experienced</p>
+                  <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Node js</h3>
-                  <p>Basic</p>
+                  <p class="basic">Basic</p>
                 </div>
               </article>
 
@@ -189,7 +211,7 @@
                 <img src="assets/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <p class="intermediate">Intermediate</p>
                 </div>
               </article>
             </div>
@@ -205,8 +227,8 @@
     </section>
     <!-- PROJECTS -->
     <section id="projects">
-      <p class="secion__text__p1">Browse my recent</p>
-      <h1 class="title">Projects</h1>
+      <p  class="secion__text__p1 browse">Browse my recent</p>
+      <h1 class="title projects_transalation">Projects</h1>
 
       <div class="experience-details-container">
         <div class="about-container">
@@ -279,10 +301,10 @@
     </section>
     <!-- CONTACT -->
     <section id="contact">
-      <h1 title="title">Contact me</h1>
+      <h1  class="title contact_me">Contact me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
-          <img src="assets/envelope-at.svg" class="icon contact-icon" alt="" />
+          <img src="assets/envelope-at.svg" class="contact-icon" alt="" />
           <p>
             <a
               class="contact-link"
@@ -293,7 +315,7 @@
           </p>
         </div>
         <div class="contact-info-container">
-          <img src="assets/linkedin.svg" class="icon contact-icon" alt="" />
+          <img src="assets/linkedin.svg" class="contact-icon" alt="" />
           <p>
             <a
               class="contact-link"
@@ -307,17 +329,24 @@
     </section>
     <!-- FOOTER -->
     <footer>
-      <nav>
+      <nav class="footer-nav">
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a class="about_transalation" href="#about">About</a></li>
+            <li>
+              <a class="experience_transalation" href="#experience"
+                >Experience</a
+              >
+            </li>
+            <li>
+              <a class="projects_transalation" href="#projects">Projects</a>
+            </li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
     </footer>
+    <script src="translations.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
