--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ilyes's portfolio</title>
-    <link rel="icon" type="image/svg+xml" href="assets/programmer-computer-icon.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/icons/programmer-computer-icon.svg">
 
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/mediaqueries.css" />
   </head>
   <body>
     <!-- DECKTOP NAV -->
@@ -56,12 +56,12 @@
     <!-- SECTIONS -->
     <section id="profile">
       <div class="section__pic-container">
-        <img src="assets/profile.JPG" alt="" />
+        <img src="assets/images/profile.JPG" alt="" />
       </div>
 
       <div class="secion__text">
         <p  class="secion__text__p1 hello">Hello , I am</p>
-        <h1 class="title">ilyes mkb</h1>
+        <h1 class="title">ilyes</h1>
         <p  class="secion__text__p2 job_title">Full Stack Developper</p>
         <div class="btn-container">
           <button id="cv-btn" class="btn btn-color-2">CV</button>
@@ -71,15 +71,15 @@
         <div id="socials-container">
           <img
             class="icon"
-            src="./assets/linkedin.svg"
+            src="./assets/icons/linkedin.svg"
             alt=""
-            onclick="window.open('https://www.linkedin.com/', '_blank')"
+            onclick="window.open('https://www.linkedin.com/in/ilyes-dev/', '_blank')"
           />
           <img
             class="icon"
-            src="./assets/github.svg"
+            src="./assets/icons/github.svg"
             alt=""
-            onclick="window.open('https://www.github.com/', '_blank')"
+            onclick="window.open('https://github.com/Ilyeswebdev', '_blank')"
           />
         </div>
       </div>
@@ -90,12 +90,12 @@
       <h1 class="title about_transalation">About Me</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img src="assets/profile.JPG" alt="" />
+          <img src="assets/images/profile.JPG" alt="" />
         </div>
         <div class="about-details-container">
           <div class="about-container">
             <div class="details-container">
-              <img class="about-pic" src="assets/leaderboard.svg" alt="" />
+              <img class="about-pic" src="assets/icons/leaderboard.svg" alt="" />
               <h3>Experience</h3>
               <p class="experience_summary">
                 1+ year <br />
@@ -103,7 +103,7 @@
               </p>
             </div>
             <div class="details-container">
-              <img src="assets/school.svg" alt="" />
+              <img src="assets/icons/school.svg" alt="" />
               <h3 class="education">Education</h3>
               <p class="degree">
                 senior technician
@@ -113,7 +113,7 @@
             </div>
 
             <img
-              src="/assets/double_arrow_down.svg"
+              src="/assets/icons/double_arrow_down.svg"
               class="icon arrow"
               alt=""
               onclick="location.href='#experience'"
@@ -149,21 +149,21 @@
             </h2>
             <div class="article-container">
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>HTML</h3>
                   <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>CSS</h3>
                   <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Javascript</h3>
                   <p class="experienced">Experienced</p>
@@ -171,7 +171,7 @@
               </article>
 
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Bootstrap</h3>
                   <p class="intermediate">Intermediate</p>
@@ -186,21 +186,21 @@
             </h2>
             <div class="article-container">
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>PHP</h3>
                   <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>MYSQL</h3>
                   <p class="experienced">Experienced</p>
                 </div>
               </article>
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Node js</h3>
                   <p class="basic">Basic</p>
@@ -208,7 +208,7 @@
               </article>
 
               <article>
-                <img src="assets/check-circle.svg" alt="" class="icon" />
+                <img src="assets/icons/check-circle.svg" alt="" class="icon" />
                 <div>
                   <h3>Git</h3>
                   <p class="intermediate">Intermediate</p>
@@ -219,7 +219,7 @@
         </div>
       </div>
       <img
-        src="/assets/double_arrow_down.svg"
+        src="/assets/icons/double_arrow_down.svg"
         class="icon arrow"
         alt=""
         onclick="location.href='#projects'"
@@ -235,7 +235,7 @@
           <!-- card -->
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="assets/project1.jpg" class="project-img" alt="" />
+              <img src="assets/images/project1.jpg" class="project-img" alt="" />
             </div>
             <h2 class="experience-sub-title project-title">Project One</h2>
             <div
@@ -254,7 +254,7 @@
           <!-- Card -->
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="assets/project1.jpg" class="project-img" alt="" />
+              <img src="assets/images/project1.jpg" class="project-img" alt="" />
             </div>
             <h2 class="experience-sub-title project-title">Project two</h2>
             <div
@@ -273,7 +273,7 @@
           <!-- card -->
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="assets/project1.jpg" class="project-img" alt="" />
+              <img src="assets/images/project1.jpg" class="project-img" alt="" />
             </div>
             <h2 class="experience-sub-title project-title">Project three</h2>
             <div
@@ -293,7 +293,7 @@
       </div>
 
       <img
-        src="/assets/double_arrow_down.svg"
+        src="/assets/icons/double_arrow_down.svg"
         class="icon arrow"
         alt=""
         onclick="location.href='#contact'"
@@ -304,7 +304,7 @@
       <h1  class="title contact_me">Contact me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
-          <img src="assets/envelope-at.svg" class="contact-icon" alt="" />
+          <img src="assets/icons/envelope-at.svg" class="contact-icon" alt="" />
           <p>
             <a
               class="contact-link"
@@ -315,7 +315,7 @@
           </p>
         </div>
         <div class="contact-info-container">
-          <img src="assets/linkedin.svg" class="contact-icon" alt="" />
+          <img src="assets/icons/linkedin.svg" class="contact-icon" alt="" />
           <p>
             <a
               class="contact-link"
